add venues page to homemodule and views

--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -12,11 +12,11 @@ main {
 }
 
 #footer {
-    background-color: #69777C;
+    background-color: #617B85;
 }
 
 #header {
-    background-color: #69777C;
+    background-color: #617B85;
     height: 160%;
     padding-top: 2%;
 }
@@ -33,3 +33,8 @@ main {
 #panel-items {
     font-size: 22px;
 }
+
+
+purple complementary color: #616985
+
+#88968B green
