--- a/Views/bands.cshtml
+++ b/Views/bands.cshtml
@@ -12,4 +12,7 @@
     }
   </ul>
 }
-<h4><a href="/bands/new">Add a new band</a></h4>
+<h4><a href="/band/new" class="btn">Add a new band</a></h4>
+<form action="/bands/delete_all" method="post">
+    <button type="submit" class="btn">Delete all bands</button>
+</form>
