--- a/Views/venues.cshtml
+++ b/Views/venues.cshtml
@@ -12,4 +12,7 @@
     }
   </ul>
 }
-<h4><a href="/venues/new">Add a new venue</a></h4>
+<h4><a href="/venue/new" class="btn">Add a new venue</a></h4>
+<form action="/venues/delete_all" method="post">
+    <button type="submit" class="btn">Delete all venues</button>
+</form>
