add final routing and styles

--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -6,7 +6,7 @@ body {
     color: white;
     background-size: cover;
     background-position: center;
-    font-size: 26px; 
+    font-size: 26px;
 }
 main {
     flex: 1 0 auto;
@@ -39,6 +39,14 @@ main {
     color: white !important;
 }
 
-purple complementary color: #616985
+.btn {
+    background-color: #616985 !important;
+}
 
-#88968B green
+a {
+    color: #99D0A4;
+}
+
+p {
+    font-size: 17px;
+}
